Fix image alignment.

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -88,17 +88,23 @@
 
   }
 
-  #image-container: {
+  #image-container {
     position: relative;
   }
 
-  .header-image-1 {
+  .header-image {
     position: relative;
-    width: 20%;
-    bottom: 230px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    width: 15%;
+  }
+
+  #header-image-1 {
+    bottom: 175px; 
+    margin-left: 5%;
+  }
+  
+  #header-image-2 {
+    bottom: 175px;
+    margin-left: 30%;
   }
 
   .header-contact-info {
